# voxelgame

./: .gitignore  CMakeLists.txt
include/: block.h  chunk.h  chunkcoord.h  noise.h  raycast.h  saveformat.h  saveload.h  world.h
src/: chunk.cpp  main.cpp  noise.cpp  raycast.cpp  saveload.cpp  world.cpp
